--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using CrossTenantChat
 @using CrossTenantChat.Components
 @using CrossTenantChat.Components.Shared
+@using Microsoft.Extensions.Configuration
