--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -29,6 +29,12 @@
                     </svg>
                     Start Chatting
                 </a>
+                <a href="/login?returnUrl=/calling" class="fluent-button fluent-button-outline fluent-button-large ms-2">
+                    <svg width="20" height="20" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
+                        <path d="M3.654 1.328a.678.678 0 0 1 .737-.183l2.522.99c.257.101.44.33.49.6l.451 2.453a.678.678 0 0 1-.27.654l-1.012.76a11.42 11.42 0 0 0 4.516 4.516l.76-1.012a.678.678 0 0 1 .654-.27l2.453.451c.27.049.499.232.6.49l.99 2.522a.678.678 0 0 1-.183.737l-1.29 1.29c-.343.343-.82.492-1.289.4-1.86-.37-3.68-1.2-5.259-2.38A18.634 18.634 0 0 1 2.065 6.83c-1.18-1.58-2.01-3.398-2.38-5.26-.092-.468.057-.945.4-1.288l1.29-1.29z"/>
+                    </svg>
+                    Start Calling
+                </a>
             </div>
         </div>
     </section>
