--- a/Components/App.razor
+++ b/Components/App.razor
@@ -21,6 +21,8 @@
 
 <body>
     <Routes />
+    <!-- Azure Communication Calling SDK (loaded globally for demo convenience) -->
+    <script src="https://cdn.jsdelivr.net/npm/%40azure/communication-calling%401.27.1/dist/acs.min.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
