--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -34,6 +34,11 @@
                 <span class="fluent-nav-text">Home</span>
             </NavLink>
         </div>
+
+        <AuthorizeView>
+            <Authorized>
+            </Authorized>
+        </AuthorizeView>
         
         <AuthorizeView>
             <NotAuthorized>
